--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "gengine/module/spdlog"]
 	path = gengine/module/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule ".\\gengine\\module\\glfw"]
+	path = .\\gengine\\module\\glfw
+	url = https://github.com/glfw/glfw
