--- a/gengine/gengine.vcxproj
+++ b/gengine/gengine.vcxproj
@@ -17,13 +17,16 @@
     <ClInclude Include="include\engine\events\MouseEvent.h" />
     <ClInclude Include="include\engine\log\Log.h" />
     <ClInclude Include="include\engine\app\Application.h" />
-    <ClInclude Include="include\dllDefine.h" />
+    <ClInclude Include="include\define.h" />
     <ClInclude Include="include\engine\app\EntryPoint.h" />
+    <ClInclude Include="include\engine\windows\Window.h" />
     <ClInclude Include="include\ge.h" />
+    <ClInclude Include="include\platform\windows\Windows.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\engine\log\Log.cpp" />
     <ClCompile Include="src\engine\app\Application.cpp" />
+    <ClCompile Include="src\platform\windows\Windows.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="module\glfw\glfw.vcxproj">
@@ -77,7 +80,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>GE_PLATFORM_WINDOWS;GE_BUILD_DLL;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);GE_PLATFORM_WINDOWS;GE_PLATFORM_WINDOWS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GE_ENABLE_ASSERTS;GE_PLATFORM_WINDOWS;GE_BUILD_DLL;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);GE_PLATFORM_WINDOWS;GE_PLATFORM_WINDOWS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)gengine\module\glfw\include;$(SolutionDir)gengine\include;$(SolutionDir)gengine\module\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
@@ -92,7 +95,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>GE_PLATFORM_WINDOWS;GE_BUILD_DLL;NDEBUG;_CONSOLE;%(PreprocessorDefinitions);GE_PLATFORM_WINDOWS;GE_PLATFORM_WINDOWS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GE_ENABLE_ASSERTS;GE_PLATFORM_WINDOWS;GE_BUILD_DLL;NDEBUG;_CONSOLE;%(PreprocessorDefinitions);GE_PLATFORM_WINDOWS;GE_PLATFORM_WINDOWS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)gengine\module\glfw\include;$(SolutionDir)gengine\include;$(SolutionDir)gengine\module\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
