--- a/gengine/gengine.vcxproj.filters
+++ b/gengine/gengine.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="include\platform\windows\Windows.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="include\engine\layer\Layer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\engine\layer\LayerStack.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\engine\app\Application.cpp">
@@ -57,6 +63,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\platform\windows\Windows.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\layer\Layer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\layer\LayerStack.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
